# vldb19-distributed-locking

./: .gitmodules  INSTALL.md  LICENSE  README.md  compile_daint.sh  generate_batch_job.sh  job.template  preprocess.template  reproducability_daint.sh  run_cray_mpi.sh  run_general_mpi.sh  test_cray_mpi.sh  test_general_mpi.sh
HumongousLock/: Makefile
data/: .gitignore  README.md  _exp_helpers.py  collect_data.sh  collect_data_paper.sh  exp2json.py  jsonl2hdf5.py  requirements.txt
data/plots/: abortion-rate-warehouses.py  ethplot.mplstyle  exp_helpers.py  locking-throughput-new.py  network-delay.py  transaction-throughput-new.py  transaction-throughput-warehouses.py  tx-breakdown.py
data/processing/: locking-throughput.py  transaction-throughput.py  tx-breakdown.py
data/traces_paper/: out-read_com-1024-1-16-16---nowait-.exp  out-read_com-1024-1-16-16---timestamp-.exp  out-read_com-1024-1-16-16---waitdie-.exp  out-read_com-1024-1-16-16--.exp  out-read_com-1024-128-16-16---nowait-.exp  out-read_com-1024-128-16-16---timestamp-.exp  out-read_com-1024-128-16-16---waitdie-.exp  out-read_com-1024-128-16-16--.exp  out-read_com-1024-16-16-16---nowait-.exp  out-read_com-1024-16-16-16---timestamp-.exp  out-read_com-1024-16-16-16---waitdie-.exp  out-read_com-1024-16-16-16--.exp  out-read_com-1024-2-16-16---nowait-.exp  out-read_com-1024-2-16-16---timestamp-.exp  out-read_com-1024-2-16-16---waitdie-.exp  out-read_com-1024-2-16-16--.exp  out-read_com-1024-32-16-16---nowait-.exp  (+297 more)
workload-traces/: README.md
workload-traces/mysql/tpcc/make_trace/src/: CMakeLists.txt  main.cpp
(+65 files in other folders)
